forum_gitops/laravel_app/oldnginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: forum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-data
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: stat-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
